--- a/agency.css
+++ b/agency.css
@@ -109,7 +109,7 @@ p{
 
 #main-footer{
     padding: 2em;
-    background: 000;
+    background: #000;
     color: #fff;
     text-align: center;
 }
@@ -117,3 +117,32 @@ p{
     color: #2690d4;
     text-decoration: none;
 }
+
+/* Media Queries*/
+@media (min-width: 700px) {
+    .grid{
+        display: grid;
+        grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+    }
+    #section-a .content-text{
+        columns: 2;
+        column-gap: 2em;
+    }
+    #section-a .content-text p{
+        padding-top: 0;
+    }
+    .content-wrap, #section-b ul{
+        grid-column: 2/4;
+    }
+    .box, #main-footer div{
+        grid-column: span 2;
+    }
+    #section-b ul{
+        display: flex;
+        justify-content: space-around;
+    }
+    #section-b li{
+        width: 31%;
+    }
+}
+
